--- a/ft-document-panel.html
+++ b/ft-document-panel.html
@@ -136,7 +136,7 @@ A panel that displays a list of FileThis documents
             <!-- Views -->
             <iron-pages
                     id="views"
-                    style="width:100%; height:100%;"
+                    style="width:100%; height:100%; background-color:white"
                     attr-for-selected="id"
                     selected="{{selectedView}}">
 
