--- a/ft-document-panel.html
+++ b/ft-document-panel.html
@@ -42,6 +42,12 @@ A panel that displays a list of FileThis documents
 
     <template>
 
+        <style>
+            :host {
+                display:block;
+            }
+        </style>
+
         <div class="layout vertical">
 
             <!-- Button bar -->
