--- a/demo/demo-fixture.html
+++ b/demo/demo-fixture.html
@@ -53,16 +53,21 @@ A panel that displays a list of FileThis documents
 
     <style include="iron-flex iron-flex-alignment iron-positioning"></style>
 
-    <style is="custom-style">
-
-        paper-checkbox {
-            width:165px;
-            margin-bottom:16px;
-        }
-
-    </style>
-
     <template>
+
+        <style>
+            :host {
+                display:block;
+            }
+        </style>
+
+        <style is="custom-style">
+
+            paper-checkbox {
+                width:165px;
+                margin-bottom:16px;
+            }
+        </style>
 
         <div class="layout horizontal center">
 
