--- a/demo/demo-fixture.html
+++ b/demo/demo-fixture.html
@@ -125,6 +125,10 @@ A panel that displays a list of FileThis documents
                 <paper-checkbox checked="{{showDeleteButton}}">
                     Show Delete Button
                 </paper-checkbox>
+
+                <paper-checkbox checked="{{showDocumentCountButton}}">
+                    Show Document Count
+                </paper-checkbox>
             </div>
 
             <!-- Panel -->
@@ -141,6 +145,7 @@ A panel that displays a list of FileThis documents
                         show-upload-button="[[showUploadButton]]"
                         show-download-button="[[showDownloadButton]]"
                         show-delete-button="[[showDeleteButton]]"
+                        show-document-count="[[showDocumentCountButton]]"
                         style="width:700px; height:600px">
                 </ft-document-panel>
             </div>
@@ -198,6 +203,12 @@ A panel that displays a list of FileThis documents
                 },
 
                 showDeleteButton:
+                {
+                    type: Boolean,
+                    value: true
+                },
+
+                showDocumentCountButton:
                 {
                     type: Boolean,
                     value: true
